kubernetes/management/mariadb-operator/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mariadb-operator
  labels:
    backups.kalexlab.xyz/provision: "true"
