kubernetes/management/mariadb-operator/manifests/network-policies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: mariadb-allow-operator-probe
spec:
  endpointSelector:
    matchLabels:
      kalexlab.xyz/component: mariadb
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: mariadb-operator
        - matchLabels:
            app.kubernetes.io/instance: mariadb-metrics
            app.kubernetes.io/name: exporter
      toPorts:
        - ports:
            - port: "3306"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "3306"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cnpg-cluster-allow-prometheus
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: mariadb-metrics
      app.kubernetes.io/name: exporter
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9104"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            kalexlab.xyz/component: mariadb
      toPorts:
        - ports:
            - port: "3306"
              protocol: TCP
